--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Table</string>
+    <string name="scan_button">Scan</string>
+    <string name="data_button">Data Charts</string>
 </resources>
