--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Table</string>
     <string name="scan_button">Scan</string>
     <string name="data_button">Data Charts</string>
+    <string name="welcome_text">Welcome!</string>
+    <string name="scan_descriptor">Click scan to begin saving battery and fix connection.</string>
+    <string name="welcome_descriptor">TABLE will help you save battery while fixing your connection.</string>
 </resources>
