--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Table</string>
+    <string name="app_name">TABLE</string>
     <string name="data_button">Data Charts</string>
     <string name="action_back">Back</string>
     <string name="action_menu">Menu</string>
