Added "Settings" and "Graph" classes, activities, and fragments.  I cleaned up the activity_main and added ability to click on graph as well as button for Settings.
- New color scheme (taken from OSU hex colors).
- Song of the week added (Eric Church this week) - you can uncomment lines in MainActivity to play it on launch ;)
- New Logo!  Looks like a Table? Kinda... idk

Hopefully I didn't break anything... but we shall see.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <!-- Recommendations -->
     <string name="recommendation_button">Tips</string>
     <string name="recommendation_descriptor">Click here to view recommendations made by TABLE.</string>
+    <!-- Settings -->
+    <string name="settings_button">Settings</string>
+    <string name="settings_descriptor">Change options for scanning and background operations.</string>
 </resources>
