--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,8 +23,12 @@
     <string name="read_location_permission_denied">User denied request for location permission</string>
 
     <!-- Connect to specific wifi Strings-->
-    <string name = "connect_to_wifi">Fix my WiFi</string>
-    <string name = "connect_to_wifi5G">Fix my Wifi 5G</string>
+    <string name="connect_to_wifi">Fix my WiFi</string>
+    <string name="connect_to_wifi5G">Fix my Wifi 5G</string>
+
+    <!-- Wifi -->
+    <string name="wifi_button">Wifi</string>
+    <string name="wifi_descriptor">Check current and past performance of your Wifi.</string>
 
 
 </resources>
