--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
 
     <!-- Connect to specific wifi Strings-->
     <string name="connect_to_wifi">Fix my WiFi</string>
-    <string name="connect_to_wifi5G">Fix my Wifi 5G</string>
+    <string name="connect_to_wifi5G">Show my Speed</string>
 
     <!-- Wifi -->
     <string name="wifi_button">Wifi</string>
